[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[bdist_wheel]
universal = 1

[flake8]
ignore = E203, E266, E501, W503, E302, W504
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = .git,.ropeproject,.tox,build,env,venv,__pycache__

[tool:pytest]
addopts = -s
